final-alta-frontend

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/theme_styles.css">
     <link rel="stylesheet" href="./assets/contact-form.css">
     <link rel="stylesheet" href="./assets/storage-sec.css">
+    <link rel="stylesheet" href="./assets/value-sec.css">
     <title>Document</title>
 </head>
 
@@ -175,26 +176,78 @@
             <div style="max-width: 900px;" class="content-wrapper mx-auto text-center">
                 <span class="d-block text-primary fs-20 mb-1 fw-bold">Core Values and Commitments</span>
                 <h2 class="main-title">Our Mission and Values</h2>
-                <p class="mb-0">Thousands of global resellers trust Alta to deliver quality, tested, authentic equipment to their clients and we take that responsibility seriously. We've succeeded in satisfying our clients for over 29 years thanks to a culture built on principles, in the pursuit of our mission of unlocking value and extending life.</p>
+                <p class="mb-5">Thousands of global resellers trust Alta to deliver quality, tested, authentic equipment
+                    to their clients and we take that responsibility seriously. We've succeeded in satisfying our
+                    clients for over 29 years thanks to a culture built on principles, in the pursuit of our mission of
+                    unlocking value and extending life.</p>
+            </div>
+            <div class="row g-3">
+                <div class="col-lg-3 order-lg-1">
+                    <div class="value value-left">
+                        <div class="value-inner">
+                            <div class="icon"><img src="./assets/value-icon-1.svg" width="36px" height="36px"
+                                    alt="value-icon"></div>
+                            <div class="content">Do The Right Thing</div>
+                            <p class="mb-0">We do what's right, because we know what's right. For our customers, for our
+                                teammates, for our community.
+                                Even when it's hard or costly.
+                                Especially when no one is looking</p>
+                        </div>
+                        <div class="value-inner">
+                            <div class="icon"><img src="./assets/value-icon-1.svg" width="36px" height="36px"
+                                    alt="value-icon"></div>
+                            <div class="content">Do The Right Thing</div>
+                            <p class="mb-0">We do what's right, because we know what's right. For our customers, for our
+                                teammates, for our community.
+                                Even when it's hard or costly.
+                                Especially when no one is looking</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="position-relative">
+                        <img src="./assets/value-angle-group.webp" width="438" height="320" class="value-angle"
+                            alt="value-angle">
+                        <img style="border: 3px solid var(--primary); border-radius: 50%; max-width: 402px; z-index: 1;"
+                            class="img-fluid d-block mx-auto position-relative" src="./assets/value-center-img.webp" width="402" height="402"
+                            alt="value-image">
+                    </div>
+                </div>
+                <div class="col-lg-3 order-lg-2">
+                    <div class="value value-right">
+                        <div class="value-inner">
+                            <div class="icon"><img src="./assets/value-icon-1.svg" width="36px" height="36px"
+                                    alt="value-icon"></div>
+                            <div class="content">Do The Right Thing</div>
+                            <p class="mb-0">We do what's right, because we know what's right. For our customers, for our
+                                teammates, for our community.
+                                Even when it's hard or costly.
+                                Especially when no one is looking</p>
+                        </div>
+                        <div class="value-inner">
+                            <div class="icon"><img src="./assets/value-icon-1.svg" width="36px" height="36px"
+                                    alt="value-icon"></div>
+                            <div class="content">Do The Right Thing</div>
+                            <p class="mb-0">We do what's right, because we know what's right. For our customers, for our
+                                teammates, for our community.
+                                Even when it's hard or costly.
+                                Especially when no one is looking</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
-    <section class="storage-sec">
+    <section class="storage-sec half-sec content-right">
         <div class="container">
-            <h2 class="main-title text-center">The "Alta Way"</h2>
-            <p style="max-width: 900px;" class="mx-auto text-center mb-5">The four core values above are the guiding
-                principles that we have built our company on, and continue to measure ourselves by every day - in
-                delivery, hiring, evaluating employees, and continuous improvement.
-                The way in which we demonstrate these core values have been distilled into 30 principles, our internal
-                guide of actions, which we call "The Alta Way".</p>
             <div class="row g-3">
-                <div class="col-lg-6">
+                <div class="col-xl-6">
                     <div class="image-wrapper">
                         <img src="./assets/storage-image-left.webp" class="d-block mx-auto img-fluid"
                             style="max-width: 595px;" width="595" height="517" alt="">
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-xl-6">
                     <div class="content-wrapper">
                         <div class="card">
                             <h2 class="main-title mb-3">Sell Us Your Servers, Networking & Storage</h2>
