--- a/contact-us.html
+++ b/contact-us.html
@@ -115,7 +115,7 @@
             <h2 class="main-title mb-5 text-center">contact us directly today</h2>
             <div class="row g-2">
                 <div class="col-lg-4 col-sm-6">
-                    <div style="background-color: var(--primary-light);" class="card">
+                    <div style="background-color: var(--gray-light);" class="card">
                         <img src="./assets/contact-phone-img.webp" class="d-block mx-auto mb-1" width="79" height="79"
                             alt="phone-icon">
                         <span style="font-size: 24px;"
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <div style="background-color: var(--primary-light);" class="card">
+                    <div style="background-color: var(--gray-light);" class="card">
                         <img src="./assets/contact-envelop-img.webp" class="d-block mx-auto mb-1" width="79" height="79"
                             alt="phone-icon">
                         <span style="font-size: 24px;"
@@ -137,7 +137,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-12">
-                    <div style="background-color: var(--primary-light);" class="card">
+                    <div style="background-color: var(--gray-light);" class="card">
                         <img src="./assets/contact-location-img.webp" class="d-block mx-auto mb-1" width="79"
                             height="79" alt="phone-icon">
                         <span style="font-size: 24px;"
@@ -150,45 +150,40 @@
             </div>
         </div>
     </section>
-    <section class="demand-sec pb-0">
+    <section class="demand-sec half-sec content-left content-right pb-0">
         <div class="row">
             <div class="col-lg-6">
                 <div class="left-image-wrapper">
                     <img src="./assets/contact-page-img-1.webp" class="img-fluid" width="720" height="526"
                         alt="left-image">
-                    <div class="container">
-                        <div class="content-wrapper">
-                            <h2 class="main-title text-white">Real People</h2>
-                            <div class="d-flex align-items-center justify-content-between gap-1 flex-wrap">
-                                <p style="max-width: 410px;" class="mb-0 text-white">Your request will be returned by
-                                    Alta's onsite staff here in Minnesota.
-                                    We're
-                                    fanatics about response time.</p>
-                                <a href="#" class="btn btn-primary d-block">Email Us</a>
-                            </div>
+                    <div class="content-wrapper">
+                        <h2 class="main-title text-white">Real People</h2>
+                        <div class="d-flex align-items-center justify-content-between gap-1 flex-wrap">
+                            <p style="max-width: 410px;" class="mb-0 text-white">Your request will be returned by
+                                Alta's onsite staff here in Minnesota.
+                                We're
+                                fanatics about response time.</p>
+                            <a href="#" class="btn btn-primary d-block">Email Us</a>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="right-content-wrapper">
-                    <div class="container">
-                        <div class="inner-content">
-                            <div class="content">
-                                <h2 class="main-title">IT On Demand</h2>
-                                <p class="mb-1">With Over 1.3 Million Parts & Systems in Stock, we not only respond
-                                    quickly,
-                                    but can ship
-                                    immediately. And we're always buying more.</p>
-                                <span style="color: black;" class="d-block mb-3 fw-bold">We're Always Buying
-                                    More.</span>
-                                <a href="#" class="btn btn-primary d-block">Email Us Today</a>
-                            </div>
-                            <div class="image-wrapper">
-                                <img style="max-width: 332px;" src="./assets/contact-page-img-2.webp"
-                                    class="img-fluid d-block mx-auto" width="332" height="258"
-                                    alt="right-content-image">
-                            </div>
+                    <div class="inner-content">
+                        <div style="max-width: 568px;" class="content-wrapper">
+                            <h2 class="main-title">IT On Demand</h2>
+                            <p class="mb-1">With Over 1.3 Million Parts & Systems in Stock, we not only respond
+                                quickly,
+                                but can ship
+                                immediately. And we're always buying more.</p>
+                            <span style="color: black;" class="d-block mb-3 fw-bold">We're Always Buying
+                                More.</span>
+                            <a href="#" class="btn btn-primary d-block">Email Us Today</a>
+                        </div>
+                        <div class="image-wrapper">
+                            <img style="max-width: 332px;" src="./assets/contact-page-img-2.webp"
+                                class="img-fluid d-block mx-auto" width="332" height="258" alt="right-content-image">
                         </div>
                     </div>
                 </div>
