--- a/model.html
+++ b/model.html
@@ -258,16 +258,16 @@
             </div>
         </div>
     </section>
-    <section class="storage-sec pb-0">
+    <section class="storage-sec half-sec content-right pb-0">
         <div class="container">
             <div class="row g-3">
-                <div class="col-lg-6">
+                <div class="col-xl-6">
                     <div class="image-wrapper">
                         <img src="./assets/storage-image-left.webp" class="d-block mx-auto img-fluid"
                             style="max-width: 595px;" width="595" height="517" alt="">
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-xl-6">
                     <div class="content-wrapper">
                         <div class="card">
                             <h2 class="main-title mb-3">Sell Us Your Servers, Networking & Storage</h2>
