--- a/product.html
+++ b/product.html
@@ -214,7 +214,7 @@
                             class="d-block font-neueplak-semibold">Email: vadim.n@altatechnologies.com</a>
                     </div>
                     <p>We also buy back your excess Dell Servers for cash or trade-in.</p>
-                    <ul class="list-style-disc">
+                    <ul class="list-style-disc mb-0">
                         <li><strong>Cosmetic Code:</strong> Used Good</li>
                         <li><strong>Functional Code:</strong> F4 Fully Tested</li>
                     </ul>
