--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./assets/slick-theme.css">
     <link rel="stylesheet" href="./assets/industry-sec.css">
     <link rel="stylesheet" href="./assets/storage-sec.css">
-    <link rel="stylesheet" href="./assets/slide-icon.css">
+    <link rel="stylesheet" href="./assets/brand-sec.css">
     <title>Document</title>
 </head>
 
@@ -47,12 +47,14 @@
                     <div class="bar"></div>
                 </div>
                 <ul class="menu">
-                    <li><a href="/" class="active">Servers <img src="./assets/slick-arrow.svg" width="8" height="10" alt="">
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Servers 1</a></li>
-                        <li><a href="#">Servers 2</a></li>
-                        <li><a href="#">Servers 3</a></li>
-                    </ul></a></li>
+                    <li><a href="/" class="active">Servers <img src="./assets/slick-arrow.svg" width="8" height="10"
+                                alt="">
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Servers 1</a></li>
+                                <li><a href="#">Servers 2</a></li>
+                                <li><a href="#">Servers 3</a></li>
+                            </ul>
+                        </a></li>
                     <li><a href="blog-archive.html">Networking</a></li>
                     <li><a href="blog-single.html">Storage</a></li>
                     <li><a href="contact-us.html">About Us</a></li>
@@ -86,7 +88,8 @@
                             </div>
                             <div class="col-lg-6">
                                 <div class="image-wrapper">
-                                    <img src="./assets/home-hero-image.webp" class="img-fluid" width="705" height="380" alt="hero-image">
+                                    <img src="./assets/home-hero-image.webp" class="img-fluid" width="705" height="380"
+                                        alt="hero-image">
                                 </div>
                             </div>
                         </div>
@@ -115,7 +118,8 @@
                             </div>
                             <div class="col-lg-6">
                                 <div class="image-wrapper">
-                                    <img src="./assets/home-hero-image.webp" class="img-fluid" width="705" height="380" alt="hero-image">
+                                    <img src="./assets/home-hero-image.webp" class="img-fluid" width="705" height="380"
+                                        alt="hero-image">
                                 </div>
                             </div>
                         </div>
@@ -144,7 +148,8 @@
                             </div>
                             <div class="col-lg-6">
                                 <div class="image-wrapper">
-                                    <img src="./assets/home-hero-image.webp" class="img-fluid" width="705" height="380" alt="hero-image">
+                                    <img src="./assets/home-hero-image.webp" class="img-fluid" width="705" height="380"
+                                        alt="hero-image">
                                 </div>
                             </div>
                         </div>
@@ -153,25 +158,29 @@
             </div>
         </div>
     </seciton>
-    <section class="slide-icon">
+    <section class="brand-sec">
         <div class="container">
-            <div class="main-slider">
-                <div class="inner-slider">
-                    <img src="./assets/slide-img-1.webp" alt="">
-                    <img src="./assets/slide-img-1.webp" alt="">
-                    <img src="./assets/slide-img-1.webp" alt="">
-                    <img src="./assets/slide-img-1.webp" alt="">
-                    <img src="./assets/slide-img-1.webp" alt="">
-                    <img src="./assets/slide-img-1.webp" alt="">
-                    <img src="./assets/slide-img-1.webp" alt="">
-                    <img src="./assets/slide-img-1.webp" alt="">
-                    <img src="./assets/slide-img-1.webp" alt="">
-                    <img src="./assets/slide-img-1.webp" alt="">
-                    <img src="./assets/slide-img-1.webp" alt="">
-                    <img src="./assets/slide-img-1.webp" alt="">
-                    <img src="./assets/slide-img-1.webp" alt="">
-                    <img src="./assets/slide-img-1.webp" alt="">
-                    <img src="./assets/slide-img-1.webp" alt="">
+            <div class="d-flex align-items-center gap-2 overflow">
+                <span class="slider-text">AS SEEN IN:</span>
+                <div class="brand-slider">
+                    <div class="slider-items">
+                        <img src="./assets/slide-img-1.webp" width="120" height="30" alt="slider-icon">
+                    </div>
+                    <div class="slider-items">
+                        <img src="./assets/slide-img-1.webp" width="120" height="30" alt="slider-icon">
+                    </div>
+                    <div class="slider-items">
+                        <img src="./assets/slide-img-1.webp" width="120" height="30" alt="slider-icon">
+                    </div>
+                    <div class="slider-items">
+                        <img src="./assets/slide-img-1.webp" width="120" height="30" alt="slider-icon">
+                    </div>
+                    <div class="slider-items">
+                        <img src="./assets/slide-img-1.webp" width="120" height="30" alt="slider-icon">
+                    </div>
+                    <div class="slider-items">
+                        <img src="./assets/slide-img-1.webp" width="120" height="30" alt="slider-icon">
+                    </div>
                 </div>
             </div>
         </div>
